--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<br>
 	<br>
 	<div class="container " role="main">
-		<h2><strong> OOO의 전자기갑주소 </strong></h2>
+		<h2><strong> 박준우의 전자기갑주소 </strong></h2>
 		<div id="tablePlace"></div>
 		<button id="newAccount">계정생성</button>
 	</div>
