--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 				console.log("Ropsten Ethereum API version : ", version);
 				console.log("web3: ", web3);
 			}
+			
+			$('#getBalance').on('click', async function () {
+			    let fromaddress = $("#fromaddress").val();
+				
+				let getbalance = await web3.eth.getBalance(fromaddress);
+				let balance = web3.utils.fromWei(getbalance, "ether")
+
+				if (DEBUG) console.log("balance : ", balance + " ETH");
+				$('#message').text(" balance: " + balance + " ETH");
+			
+			})
 
 
 			$('#newAccount').on('click', async function () {
@@ -67,6 +78,9 @@
 		<h2><strong> 박준우의 전자기갑주소 </strong></h2>
 		<div id="tablePlace"></div>
 		<button id="newAccount">계정생성</button>
+		<button id="getBalance">잔액조회</button>
+		
+		<h5>송신처 <input id="fromaddress" size="45" placeholder=""></input> </h5>
 	</div>
 	<br>
 	<br>
